--- a/src/template.html
+++ b/src/template.html
@@ -1,10 +1,10 @@
-<div class="interface" tabindex="0">
+<div id="interface" tabindex="0">
 	<div class="principal">
-		<img class="poster nosmall" src="" alt="" />
-		<div class="pageerror">
+		<img id="poster" class="nosmall" src="" alt="" />
+		<div id="pageerror">
 		</div>
-		<div class="pagemain">
-			<a class="control" tabindex="0">
+		<div id="pagemain">
+			<a id="control" tabindex="0">
 				<div class="loading" aria-label="${__.loading}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<circle cx="6" cy="22" r="4" />
@@ -12,52 +12,52 @@
 						<circle cx="26" cy="22" r="4" />
 					</svg>
 				</div>
-				<div class="play" aria-label="${__.pause}">
+				<div id="play" aria-label="${__.pause}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="M 6,6 12.667,6 12.667,26 6,26 z" />
 						<path d="M 19.333,6 26,6 26,26 19.333,26 z" />
 					</svg>
 				</div>
-				<div class="pause" aria-label="${__.play}">
+				<div id="pause" aria-label="${__.play}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="M 6,6 6,26 26,16 z" />
 					</svg>
 				</div>
 			</a>
-			<div class="about">
-				<div class="titleline">
-					<div class="title"><a href="#" class="canonical" aria-label="${__.canonical}"></a></div>
-					<a class="elapse" aria-label="${__.moment}" tabindex="-1">…</a>
+			<div id="about">
+				<div id="titleline">
+					<div id="title"><a href="#" id="canonical" aria-label="${__.canonical}"></a></div>
+					<a id="elapse" aria-label="${__.moment}" tabindex="-1">…</a>
 				</div>
 				<div class="handheld-nav">
-					<button type="button" class="restart">
+					<button type="button" id="restart">
 						<svg viewBox="0 0 32 32" aria-hidden="true">
 							<polygon points="4,0 8,0 8,16 4,16"/>
 							<path d="M 16,0 8,8 16,16 z" />
 							<path d="M 24,0 16,8 24,16 z" />
 						</svg>
 					</button>
-					<button type="button" class="fastreward">
+					<button type="button" id="fastreward">
 						<svg viewBox="0 0 32 32" aria-hidden="true">
 							<path d="M 8,0 0,8 8,16 z" />
 							<path d="M 16,0 8,8 16,16 z" />
 							<path d="M 24,0 16,8 24,16 z" />
 						</svg>
 					</button>
-					<button type="button" class="reward">
+					<button type="button" id="reward">
 						<svg viewBox="0 0 32 32" aria-hidden="true">
 							<path d="M 8,0 0,8 8,16 z" />
 							<path d="M 16,0 8,8 16,16 z" />
 						</svg>
 					</button>
-					<input type="time" step="1" min="0:00" class="inputtime" />
-					<button type="button" class="foward">
+					<input type="time" step="1" min="0:00" id="inputtime" />
+					<button type="button" id="foward">
 						<svg viewBox="0 0 32 32" aria-hidden="true">
 							<path d="M 0,0 8,8 0,16 z" />
 							<path d="M 8,0 16,8 8,16 z" />
 						</svg>
 					</button>
-					<button type="button" class="fastfoward">
+					<button type="button" id="fastfoward">
 						<svg viewBox="0 0 32 32" aria-hidden="true">
 							<path d="M 0,0 8,8 0,16 z" />
 							<path d="M 8,0 16,8 8,16 z" />
@@ -65,23 +65,23 @@
 						</svg>
 					</button>
 				</div>
-				<div class="line">
-					<div class="time">
-						<div class="loadingline"></div>
-						<div class="elapsedline"></div>
-						<div class="points">
-							<svg class="pointstart" viewBox="0 0 2 5" aria-hidden="true">
+				<div id="line">
+					<div id="time">
+						<div id="loadingline"></div>
+						<div id="elapsedline"></div>
+						<div id="points">
+							<svg id="pointstart" viewBox="0 0 2 5" aria-hidden="true">
 								<path d="M 0,0 2,0 1,1 1,4 2,5 0,5 z" />
 							</svg>
-							<svg class="pointend" viewBox="0 0 2 5" aria-hidden="true">
+							<svg id="pointend" viewBox="0 0 2 5" aria-hidden="true">
 								<path d="M 2,0 0,0 1,1 1,4 0,5 2,5 z" />
 							</svg>
 						</div>
-						<time class="popup">--:--</time>
+						<time id="popup">--:--</time>
 					</div>
 				</div>
 			</div>
-			<a class="actions" aria-label="${__.more}">
+			<a id="actions" aria-label="${__.more}">
 				<svg viewBox="0 0 32 32" aria-hidden="true">
 					<circle cx="12" cy="10" r="4" />
 					<circle cx="12" cy="22" r="4" />
@@ -91,9 +91,9 @@
 				</svg>
 			</a>
 		</div>
-		<div class="pageshare">
+		<div id="pageshare">
 			<div class="share">
-				<a href="#" target="social" class="nativeshare nosmall" aria-label="${__.share}">
+				<a href="#" target="social" id="nativeshare" class="nosmall" aria-label="${__.share}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<circle cx="12" cy="10" r="4" />
 						<circle cx="12" cy="22" r="4" />
@@ -103,31 +103,31 @@
 					</svg>
 					<span class="nosmall">${__.share}</span>
 				</a>
-				<a href="#" target="social" class="twitter nonativeshare nosmall" aria-label="${__.twitter}">
+				<a href="#" target="social" id="twitter" class="nonativeshare nosmall" aria-label="${__.twitter}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="M 25.941,9.885 C 25.221,10.205 24.448,10.422 23.637,10.520 24.465,10.020 25.101,9.230 25.401,8.288 24.626,8.750 23.768,9.086 22.854,9.267 22.122,8.483 21.080,7.993 19.926,7.993 c -2.215,0 -4.011,1.806 -4.011,4.034 0,0.316 0.035,0.623 0.103,0.919 -3.333,-0.168 -6.288,-1.774 -8.267,-4.215 -0.345,0.596 -0.542,1.289 -0.542,2.028 0,1.399 0.708,2.634 1.784,3.358 -0.657,-0.020 -1.276,-0.202 -1.816,-0.504 -3.98e-4,0.016 -3.98e-4,0.033 -3.98e-4,0.050 0,1.954 1.382,3.585 3.217,3.955 -0.336,0.092 -0.690,0.141 -1.056,0.141 -0.258,0 -0.509,-0.025 -0.754,-0.072 0.510,1.602 1.991,2.769 3.746,2.801 -1.372,1.082 -3.102,1.726 -4.981,1.726 -0.323,0 -0.642,-0.019 -0.956,-0.056 1.775,1.144 3.883,1.812 6.148,1.812 7.377,0 11.411,-6.147 11.411,-11.478 0,-0.174 -0.004,-0.348 -0.011,-0.522 0.783,-0.569 1.463,-1.279 2.001,-2.088 z" />
 					</svg>
 					<span class="nosmall">${__.twitter}</span>
 				</a>
-				<a href="#" target="social" class="facebook nonativeshare nosmall" aria-label="${__.facebook}">
+				<a href="#" target="social" id="facebook" class="nonativeshare nosmall" aria-label="${__.facebook}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="m 21.117,16.002 -3.728,0 0,10.027 -4.297,0 0,-10.027 -2.070,0 0,-3.280 2.070,0 0,-2.130 c 0,-2.894 1.248,-4.616 4.652,-4.616 l 3.922,0 0,3.549 -3.203,0 c -0.950,-0.001 -1.068,0.495 -1.068,1.421 l -0.005,1.775 4.297,0 -0.568,3.280 0,2.34e-4 z" />
 					</svg>
 					<span class="nosmall">${__.facebook}</span>
 				</a>
-				<a href="#" target="social" class="email nonativeshare" aria-label="${__.e_mail}">
+				<a href="#" target="social" id="email" class="nonativeshare" aria-label="${__.e_mail}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="m 8.030,8.998 15.920,0 c 0.284,0 0.559,0.053 0.812,0.155 l -8.773,9.025 -8.773,-9.026 c 0.253,-0.101 0.528,-0.155 0.812,-0.155 z m -1.990,12.284 0,-10.529 c 0,-0.036 0.002,-0.073 0.004,-0.109 l 5.835,6.003 -5.771,5.089 c -0.045,-0.146 -0.068,-0.298 -0.069,-0.453 z m 17.910,1.754 -15.920,0 c -0.175,0 -0.348,-0.020 -0.514,-0.060 l 5.662,-4.993 2.811,2.892 2.811,-2.892 5.662,4.993 c -0.165,0.039 -0.338,0.060 -0.514,0.060 z m 1.990,-1.754 c 0,0.155 -0.023,0.307 -0.068,0.453 l -5.771,-5.089 5.835,-6.003 c 0.002,0.036 0.004,0.073 0.004,0.109 z" />
 					</svg>
 					<span class="nosmall">${__.e_mail}</span>
 				</a>
-				<a href="#" target="social" class="link" aria-label="${__.download}">
+				<a href="#" target="social" id="link" aria-label="${__.download}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="M 6,6 26,6 16,26 z" />
 						<rect x="6" y="22" width="20" height="4" />
 					</svg>
 					<span class="nosmall">${__.download}</span></a>
-				<a class="back" aria-label="${__.back}">
+				<a id="back" aria-label="${__.back}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<path d="M 9,8 24,23 23,24 8,9 z" />
 						<path d="M 9,24 24,9 23,8 8,23 z" />
@@ -137,8 +137,8 @@
 			</div>
 		</div>
 	</div>
-	<ul class="chapters">
+	<ul id="chapters">
 	</ul>
-	<ul class="playlist">
+	<ul id="playlist">
 	</ul>
 </div>
