--- a/live_chapters.html
+++ b/live_chapters.html
@@ -197,17 +197,19 @@ function interpret_form(event) {
     }
 
     function build_html_source() {
-        out =[];
+        out1=[];
+        out2=[];
         for(let line of chapters) {
-           out.push(`\n\t<li><a href="#t=${document.CPU.convert.SecondsInTime(line.time)}">${line.text} (${document.CPU.convert.SecondsInColonTime(line.time)})</a></li>`) 
+           out1.push(`\n\t<li><a href="#t=${Math.floor(line.time)}">${line.text} (${document.CPU.convert.SecondsInColonTime(line.time)})</a></li>`) 
+           out2.push(`\n\t<li>${line.text} (<a href="#t=${Math.floor(line.time)}">${document.CPU.convert.SecondsInColonTime(line.time)}</a>)</li>`) 
         }
-        return `<ol>${out.join('')}\n</ol>`;
+        return `<ol>${out1.join('')}\n</ol>\n\n<ol>${out2.join('')}\n</ol>`;
     }
 
     function build_md_source() {
         out =[];
         for(let line of chapters) {
-           out.push(`\n * [${line.text}](#t=${document.CPU.convert.SecondsInTime(line.time)})`) 
+           out.push(`\n * [${line.text}](#t=${Math.floor(line.time)})`) 
         }
         return `${out.join('')}`;
     }
@@ -215,7 +217,7 @@ function interpret_form(event) {
     function build_wiki_source() {
         out =[];
         for(let line of chapters) {
-           out.push(`\n  - [[#t=${document.CPU.convert.SecondsInTime(line.time)}|${line.text}]]`) 
+           out.push(`\n  - [[#t=${Math.floor(line.time)}|${line.text}]]`) 
         }
         return `${out.join('')}`;
     }
