stupid typo, why did a " was remplaced by an ” ?????

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,11 @@
 <div id="interface" tabindex="0">
-	<div class="principal">
+	<div id="principal">
 		<img id="poster" class="nosmall" src="" alt="" />
-		<div id="pageerror" role="alert”>
+		<div id="pageerror" role="alert">
 		</div>
 		<div id="pagemain">
 			<a id="control" tabindex="0">
-				<div class="loading" aria-label="${__.loading}">
+				<div id="loading" aria-label="${__.loading}">
 					<svg viewBox="0 0 32 32" aria-hidden="true">
 						<circle cx="6" cy="22" r="4" />
 						<circle cx="16" cy="22" r="4" />
@@ -29,7 +29,7 @@
 					<div id="title"><a href="#" id="canonical" aria-label="${__.canonical}"></a></div>
 					<a id="elapse" aria-label="${__.moment}" tabindex="-1">…</a>
 				</div>
-				<div class="handheld-nav">
+				<div id="handheld-nav">
 					<button type="button" id="restart">
 						<svg viewBox="0 0 32 32" aria-hidden="true">
 							<polygon points="4,0 8,0 8,16 4,16"/>
@@ -68,7 +68,7 @@
 				<div id="line">
 					<div id="time">
 						<div id="loadingline"></div>
-						<div id="elapsedline" role="progressbar”></div>
+						<div id="elapsedline" role="progressbar"></div>
 						<div id="points">
 							<svg id="pointstart" viewBox="0 0 2 5" aria-hidden="true">
 								<path d="M 0,0 2,0 1,1 1,4 2,5 0,5 z" />
