Throbber moved upper

--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -276,7 +276,7 @@ a:hover svg {
 
 .popup {
 	position: absolute;
-	transform: translate(-25px, 20px);
+	transform: translate(-25px, -15px);
 	z-index : 127;
 	min-width : 50px;
 	font-size : 11px;
@@ -299,15 +299,14 @@ a:hover svg {
 	content:"";
 	position: absolute;
 	left: 20px;
-	top: -16px;
+	bottom: -8px;
 	height : 0;
 	width: 0;
-	border-bottom: 16px solid #ccc;
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
+	border-top: 8px solid #ccc;
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
 	pointer-events : none;
 } 
-
 
     </style>
 
