--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -1,4 +1,24 @@
 <!--
+
+Cpu-Audio, an extension to the hash system to address timecode into audio/video elements
+Copyright (C) 2014-2018 Xavier "dascritch" Mouton-Dubosc
+
+Previously TimecodeHash, then OndeMirroir Audio Tag
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+project repository : https://github.com/dascritch/ondemiroir-audio-tag
+blog post : http://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore
+
 Note. Fonctions retirées :
 - Playlist
 - i18n
@@ -394,25 +414,6 @@ a:hover svg {
 
 <script>
 'use strict';
-
-/** @license
-	OndeMirroir Audio Tag, an extension to the hash system to address timecode into audio/video elements
-	Copyright (C) 2014-2017 Xavier "dascritch" Mouton-Dubosc
-	Previously TimecodeHash
-	This program is free software: you can redistribute it and/or modify
-	it under the terms of the GNU General Public License as published by
-	the Free Software Foundation, either version 3 of the License, or
-	(at your option) any later version.
-	This program is distributed in the hope that it will be useful,
-	but WITHOUT ANY WARRANTY; without even the implied warranty of
-	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-	GNU General Public License for more details.
-	You should have received a copy of the GNU General Public License
-	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-	--
-	project repository : https://github.com/dascritch/ondemiroir-audio-tag
-	blog post : http://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore
-*/
 
 // WATCH OUT ! You should NOT use this script in a unsecure domain name
 if (document.domain !== '') {
