Adding a second player due to regression on multiple instance

--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
 
     <cpu-audio data-title="Ex0080 🍕 Pizza" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://cpu.dascritch.net/post/2018/04/05/Ex0080-%F0%9F%8D%95-Pizza">
         <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
-        <audio controls id="audio">
+        <audio controls id="emission">
             <source src="audio.mp3"  type="audio/mpeg" />
         </audio>
     </cpu-audio>
 
+
 <p>
 000
 </p>
+    <cpu-audio data-title="Samba Résille live (2003)" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://dascritch.net/">
+        <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
+        <audio controls id="live">
+            <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3"  type="audio/mpeg" />
+        </audio>
+    </cpu-audio>
 <div>
 000
 </div>
