removing local reference

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <cpu-audio data-title="Ex0080 🍕 Pizza" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1804-Ex0080-Pizza_m.jpg" data-canonical="https://cpu.dascritch.net/post/2018/04/05/Ex0080-%F0%9F%8D%95-Pizza">
+    <cpu-audio data-title="Ex0085 Le Mystère Enigma" data-poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg" data-canonical="https://cpu.dascritch.net/post/2018/05/17/Ex0085-Histoires-de-la-cryptographie%2C-2%C3%A8me-partie-%3A-Le-myst%C3%A8re-d-Enigma">
         <!-- pour des raisons  de compatibilité arrière, il faut garder la balise audio dans la déclaration -->
         <audio controls id="emission">
-            <source src="audio.mp3"  type="audio/mpeg" />
+            <source src="https://dascritch.net/vrac/Emissions/CPU/podcast/0085-CPU%2817-05-18%29.mp3"  type="audio/mpeg" />
         </audio>
     </cpu-audio>
 
