prepare for <cpu-controller> works

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ Chapters (click on timecodes) :
 ↓ Controller only on the playing / last played &lt;audio&gt;
 </div>
 
+<cpu-controller>
+</cpu-controller>
+
 <!-- Interact with the upgraded element -->
 <script>
   window.addEventListener('WebComponentsReady', function() {
